--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,9 @@ header{
     border-bottom: 5px solid #b28756;
     color: rgb(164, 159, 159);
 }
+.menuOpen{
+    display: none;
+}
 .banner{
     height:calc(100vh - 100px ) ;
     background-color: #333;
@@ -165,6 +168,8 @@ header{
 }
 .button{
     display: inline-block;
+    margin: auto;
+    width: 150px;
     background-color: #b28756;
     color: white;
     font-size: 13px;
@@ -513,4 +518,139 @@ header{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+
+
+
+@media (max-width:450px){
+    .logo{
+        margin-left: 30px;
+    }
+    
+    .menuOpen{
+        display: block;
+        width: 45px;
+        margin-right: 30px;
+
+    }
+    nav{
+        display: none;
+        position: absolute;
+        z-index: 99;
+        width: 80%;
+        background-color: rgba(0, 0, 0, 0.9);
+        height: calc(100vh - 100px);
+        right: 0;
+        top: 100px;
+    }
+    .menu ul{
+
+        flex-direction: column;
+    }
+    .menu li a {
+        font-weight: bold;
+        height: 60px;
+        font-size: 19px;
+        margin-left: 30px;
+        border: 0;
+
+    }
+    .banner h1{
+        font-size: 30px;
+    }
+    .banner h2{
+        font-size: 17px;
+    }
+    .descriptionInfo{
+        width: 300px;
+        margin-left: 90px;
+    }
+    .card img{
+        width: 300px;
+    }
+    .sectionBory{
+        flex-direction: column;
+        align-items: center;
+    }
+    .sectionServices{
+        flex-wrap: wrap;
+    }
+    .areaBar{
+        min-width: 50%;
+    }
+    .clientsPhotos img{
+        margin-left:-120px ;
+    }
+    .descriptionClient{
+        margin-left:-120px ;
+    }
+    .footer--area{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .sectionClients{
+        width: 100vw;
+        margin-left: 40px;
+    }
+    .comentCliet{
+        width: 90vw;
+    }
+    .comentCliet p{
+        margin-left:-33px ;
+    }
+    .default.section-companies{
+        display: none;
+    }
+}
+@media (min-width:450px) and (max-width:800px){
+    .logo{
+        margin-left: 30px;
+    }
+    
+    .menuOpen{
+        display: block;
+        width: 45px;
+        margin-right: 30px;
+
+    }
+    nav{
+        display: none;
+        position: absolute;
+        z-index: 99;
+        width: 70%;
+        background-color: rgba(0, 0, 0, 0.9);
+        height: calc(100vh - 100px);
+        right: 0;
+        top: 100px;
+    }
+    .menu ul{
+
+        flex-direction: column;
+    }
+    .menu li a {
+        font-weight: bold;
+        height: 80px;
+        font-size: 27px;
+        margin-left: 50px;
+        border: 0;
+
+    }
+    .sectionBory{
+        flex-direction: column;
+        align-items: center;
+    }
+    .sectionServices{
+        flex-wrap: wrap;
+    }
+    .areaBar{
+        min-width: 50%;
+    }
+    .clientsPhotos img{
+        margin-left:-120px ;
+    }
+    .descriptionClient{
+        margin-left:-120px ;
+    }
 }
